<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Okapi Zero</string>
    <string name="app_desc">Large, easy-to-read text for deaf, hard of hearing, and noisy places.</string>
    <string name="app_version">%1$s v%2$d</string>
    <string name="app_claims_ads_desc">No Ads</string>
    <string name="app_claims_size">From 70 to 130 KB</string>
    <string name="app_claims_background_tasks_desc">No Background Activity</string>
    <string name="app_claims_offline_desc">Works Completely Offline</string>
    <string name="app_claims_trackers_desc">No Tracking</string>
    <string name="app_claims_min_api">Supports Android 2.0 and Later</string>

    <string name="license_gpl3" translatable="false">GPL 3.0</string>

    <string name="header_settings">Settings</string>
    <string name="header_theme_dark">Dark Theme</string>
    <string name="header_theme_light">Light Theme</string>
    <string name="header_system">System</string>

    <string name="btn_go_back">GO BACK</string>
    <string name="btn_about">ABOUT</string>
    <string name="btn_add_message">+ ADD MESSAGE</string>

    <string name="label_show_status_bar">Show status bar</string>
    <string name="label_keep_screen_awake">Keep screen awake</string>
    <string name="label_quick_erase">Double tap to clear the message</string>
    <string name="label_app_zoom">App Zoom</string>
    <string name="label_no_messages">No saved messages yet.</string>

    <string name="label_zoom_unit" translatable="false">%</string>
    <string name="label_collapse_indicator" translatable="false">[-]</string>
    <string name="label_expand_indicator" translatable="false">[+]</string>

    <string name="hint_new_message">New Message</string>

    <string name="toast_saved">Saved</string>

    <string name="altdescr_switch_theme">Switch between light and dark</string>
    <string name="altdescr_sort">Reorder messages</string>
    <string name="altdescr_show_list">Show saved messages</string>
    <string name="altdescr_delete">Delete</string>
    <string name="altdescr_save">Save</string>
    <string name="altdescr_preview">Preview message</string>
    <string name="altdescr_close_preview">Close preview</string>
    <string name="altdescr_open_settings">Open Settings</string>
    <string name="altdescr_move_up">Move up</string>
    <string name="altdescr_move_down">Move down</string>
</resources>
