<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    style="@style/VerticalList"
    android:layout_height="match_parent"
    android:background="@color/base">

    <LinearLayout
        android:id="@+id/toolbar_row"
        style="@style/HorizontalList"
        android:padding="4sp">

        <FrameLayout
            android:id="@+id/theme_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_switch_theme"
                android:src="@drawable/px_sun"
                android:id="@+id/theme_icon" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/sort_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_sort"
                android:src="@drawable/px_sort" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/list_btn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_show_list"
                android:src="@drawable/px_bullet_list" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/delete_btn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_delete"
                android:src="@drawable/px_trash" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/save_btn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_save"
                android:src="@drawable/px_disk" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/preview_btn"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_preview"
                android:src="@drawable/px_bullhorn" />
        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
            android:contentDescription="@string/altdescr_open_settings"
                android:src="@drawable/px_cog" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_view"
        style="@style/VerticalList"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/messages_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:cacheColorHint="@android:color/transparent"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/empty_label"
            style="@style/H2_Center"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/label_no_messages" />

        <Button
            android:id="@+id/add_btn"
            style="@style/BTN"
            android:layout_margin="16dp"
            android:text="@string/btn_add_message" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="@string/hint_new_message"
        android:inputType="textMultiLine"
        android:padding="16dp"
        android:textColor="@color/text"
        android:textSize="@dimen/h1"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/base"
        android:visibility="gone">

        <TextView
            android:id="@+id/preview_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:textColor="@color/text" />

        <FrameLayout
            android:id="@+id/preview_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:padding="@dimen/small">

            <ImageView
                style="@style/Icon24"
                android:contentDescription="@string/altdescr_close_preview"
                android:src="@drawable/px_times" />
        </FrameLayout>
    </FrameLayout>

</LinearLayout>
